<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".listaOferta.detalleOferta">

    <TextView
            android:text="@string/nombre_empresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaEmpresa" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="#CF1F1F" android:textSize="24sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaCorreo"
            app:layout_constraintTop_toBottomOf="@+id/detalleOfertaEmpresa" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.14" android:textSize="14sp"/>
    <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.14" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/detalleOfertaCorreo" android:layout_marginTop="40dp"/>
    <TextView
            android:text="@string/localidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaLocalidad"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/detalleOfertaTelefono" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detalleOfertaFecha2" android:layout_marginTop="40dp"/>
    <TextView
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaFecha2"
            app:layout_constraintTop_toBottomOf="@+id/detalleOfertaEmpresa" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:textSize="14sp" app:layout_constraintStart_toEndOf="@+id/detalleOfertaCorreo"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detalleOfertaDescripcion"
            app:layout_constraintTop_toBottomOf="@+id/detalleOfertaTelefono" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintHorizontal_bias="0.45"/>
</android.support.constraint.ConstraintLayout>