<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginAndRegistrar.login">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fotologo"
            android:id="@+id/imageView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/Imagen"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/text_email_login"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:autofillHints=""
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/Password"
            android:id="@+id/text_password_login"
            android:layout_below="@id/text_email_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/text_email_login"/>

    <Button
            android:layout_width="127dp"
            android:layout_height="71dp"
            android:text="@string/login"
            android:id="@+id/btn_registrar_registrar"
            android:layout_below="@+id/text_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/text_password_login"/>
    <Button
            android:text="@string/registrar"
            android:layout_width="132dp"
            android:layout_height="67dp"
            android:id="@+id/button_registrar" app:layout_constraintStart_toEndOf="@+id/btn_registrar_registrar"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/text_password_login"
            app:layout_constraintHorizontal_bias="0.48"/>


</android.support.constraint.ConstraintLayout>