<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginAndRegistrar.registrar">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/text_email_login"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:autofillHints=""
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_email2"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:id="@+id/editText_email2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/text_password_login"
            android:layout_below="@+id/text_email_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:importantForAutofill="no"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text_email_login"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/editText_password2"
            android:layout_below="@+id/text_email_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:importantForAutofill="no"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_password_login"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:id="@+id/btn_registrar_registrar"
            android:layout_below="@+id/text_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.51" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_password2"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:id="@+id/btn_atras_registrar"
            android:layout_below="@+id/text_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="116dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_password2"/>


</android.support.constraint.ConstraintLayout>